--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,8 @@ dependencies {
     // commons-lang3
     implementation 'org.apache.commons:commons-lang3:3.13.0'
 
-
+    // data faker
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 ebean {
